tests/baselines/reference/jsxAndTypeAssertion.errors.txt
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(7,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(7,17): error TS1005: '}' expected.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(11,32): error TS1005: '}' expected.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(13,36): error TS1005: '}' expected.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(15,45): error TS1005: '}' expected.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(22,1): error TS1005: ':' expected.


==== tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx (6 errors) ====
    
    declare var createElement: any;
    
    class foo {}
    
    var x: any;
    x = <any> { test: <any></any> };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    ~
!!! error TS1005: '}' expected.
    
    
    x = <any><any></any>;
    ~~~~~~~~~~~~~~~~~~~~~
     
    ~
    x = <foo>hello {<foo>{}} </foo>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                   ~
!!! error TS1005: '}' expected.
    
    
    x = <foo test={<foo>{}}>hello</foo>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                       ~
!!! error TS1005: '}' expected.
    
    
    x = <foo test={<foo>{}}>hello{<foo>{}}</foo>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                ~
!!! error TS1005: '}' expected.
    
    
    x = <foo>x</foo>, x = <foo/>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    
    
    <foo>{<foo><foo>{/foo/.test(x) ? <foo><foo></foo> : <foo><foo></foo>}</foo>}</foo>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    
    
        
    ~~~~
    
    
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
!!! error TS1005: ':' expected.